syntax = "proto3";

package BoardGamesGrpc.GameOnlines;
option csharp_namespace = "BoardGamesGrpc.GameOnlines";

import "BoardGamesGrpc/protos/shared_model.proto";

enum MatchResults{
	Null = 0;
	InProgress = 1;
	Win = 2;
	Loss = 3;
	Draw = 4;
	Disconnected = 5;
}

message SearchOpponentRequest {
	int32 UserId = 1;
	int32 GameType = 2;
}

message SearchOpponentRespons {
	BoardGamesGrpc.SharedModel.ServerResponse Respons = 1;
	Match Match = 2;
}

message CancelSearchOpponentRequest {
	int32 UserId = 1;
}


message CancelSearchOpponentRespons{
	BoardGamesGrpc.SharedModel.ServerResponse Respons = 1;
}

message Player
{
	int32 ID = 1;
	string Name = 2;
	int32 Color = 3;
}

message Pawn
{
	int32 ID = 1;
	int32 Color = 2;
	int32 Type = 3;
}

message Field{
	int32 ID = 1;
	int32 Heigh = 2;
	int32 Width = 3;
	Pawn Pawn = 4;
} 

message PawnHistory
{
	int32 Turn = 1;
    int32 PawID = 2;
    int32 PreviusFiledID = 3;
    int32 CurrentFiledID = 4;
}

message Board
{
	int32 MaxHeight = 1;
	int32 MaxWidth = 2;
	int32 MinHeight = 3;
	int32 MinWidth = 4;
	repeated Field FieldList = 5;
}

message MatchUser
{
	int32 MatchUserId = 1;
	int32 MatchId = 2;
	BoardGamesGrpc.SharedModel.User User = 3;
	MatchResults MatchResult = 4;
}

message Match
{
	int32 MatchId = 1;
	int32 GameType = 2;
	string DateStart = 3;
	string DateEnd = 4;
	//google.protobuf.Timestamp DateStart = 3;
	//google.protobuf.Timestamp DateEnd = 4;
	repeated MatchUser MatchUsers = 5;
}

message GameData
{
	int32 Turn = 1;
	Player PlayerTurn = 2;
	repeated Player PlayerList = 3;
	Board Board = 4;
	repeated PawnHistory PawnHistoriesList = 5;
}

message GamePlay
{
	GameData GameData = 1; 
	Match Match = 2;
}



message PlayMatchRequest
{
	string GuidID = 1;
	int32 UserId = 2;
	GamePlay GamePlay = 3;
}

service GameOnlineService {
	rpc SearchOpponent(SearchOpponentRequest) returns (SearchOpponentRespons);

	rpc CancelSearchOpponent(CancelSearchOpponentRequest) returns (CancelSearchOpponentRespons);

	rpc PlayMatch(stream PlayMatchRequest) returns (stream GamePlay);

}